--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     }
                 </style>
                 <div id="map">
+                    <button type="button" class="btn btn-outline-warning" onclick="performSearchwithLocation()">Find Places to Help</button>
                     <script type='text/JavaScript' src='main.js'></script>
                     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAl_epmi_223d9Pr7_TlRQntFdLrlXCEwA&libraries=places&callback=initMap"
                             async defer></script>
