--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         position: absolute;
                     }
                 </style>
-                <button type="button" class="btn btn-outline-warning" onclick="performSearchwithLocation()">Find Places to Help</button>
+                <button type="button" class="btn btn-outline-warning" onclick="performSearchwithLocation()" style="padding: 20px;">Find Places to Help</button>
                 <div id="map">
                     <script type='text/JavaScript' src='main.js'></script>
                     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAl_epmi_223d9Pr7_TlRQntFdLrlXCEwA&libraries=places&callback=initMap"
