--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Start Helping</h2>
                 <h3 class="section-subheading text-muted">Select a nearby center to donate to.</h3>
+                <button type="button" class="btn btn-outline-warning" onclick="performSearchwithLocation()">Find Places to Help</button>
                 <style>
                     /* Always set the map height explicitly to define the size of the div
                     * element that contains the map. */
@@ -156,7 +157,6 @@
                         position: absolute;
                     }
                 </style>
-                <button type="button" class="btn btn-outline-warning" onclick="performSearchwithLocation()" style="padding: 20px;">Find Places to Help</button>
                 <div id="map">
                     <script type='text/JavaScript' src='main.js'></script>
                     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAl_epmi_223d9Pr7_TlRQntFdLrlXCEwA&libraries=places&callback=initMap"
