--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Start Helping</h2>
-                <h3 class="section-subheading text-muted">Select a nearby center to donate to.</h3>
-                <button type="button" class="btn btn-outline-warning" onclick="performSearchwithLocation()">Find Places to Help</button>
+                <div class="beforeMap">
+                    <h2 class="section-heading text-uppercase">Start Helping</h2>
+                    <h3 class="section-subheading text-muted">Select a nearby center to donate to.</h3>
+                    <button type="button" class="btn btn-outline-warning" onclick="performSearchwithLocation()">Find Places to Help</button>
+                </div>
                 <style>
                     /* Always set the map height explicitly to define the size of the div
                     * element that contains the map. */
@@ -258,6 +260,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <!--  <link rel="stylesheet" href="agency.css?v=1.00000">-->
 
 </head>
