added jquery cdn

--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
 
 <!-- Custom scripts for this template -->
 <script src="js/agency.min.js"></script>
+<!--Jquery scripts for this webpage-->
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 
 </body>
 
