--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+    <script src = 'https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js'></script>
 </head>
 <body id="page-top">
 
@@ -179,22 +179,22 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                <form id="contactForm" name="sentMessage" novalidate="novalidate" action= https://formspree.io/myypvyyr method="POST">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Your Name *"
+                                <input class="form-control" id="name" name ="name" type="text" placeholder="Your Name *"
                                        required="required" data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="Your Email *"
+                                <input class="form-control" id="email" name ="email" type="email" placeholder="Your Email *"
                                        required="required"
                                        data-validation-required-message="Please enter your email address.">
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *"
+                                <input class="form-control" id="phone" name ="phone" type="tel" placeholder="Your Phone *"
                                        required="required"
                                        data-validation-required-message="Please enter your phone number.">
                                 <p class="help-block text-danger"></p>
@@ -202,7 +202,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <textarea class="form-control" id="message" placeholder="Your Message *"
+                                <textarea class="form-control" id="message" name ="message" placeholder="Your Message *"
                                           required="required"
                                           data-validation-required-message="Please enter a message."></textarea>
                                 <p class="help-block text-danger"></p>
