correct printing of db vals, added text correction

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                                 rather the lack
                                 of practicality and time efficiency to do so. Our project is meant to create a
                                 user-friendly
-                                interface in which these individuals have access to orphanages’ Amazon wish lists and
+                                interface in which these individuals have access to orphanages’ Amazon wishlists and
                                 are then able
-                                to easily donate needed supply. It is an effortless manner for individuals to who do not
+                                to easily donate needed supplies. It is an effortless manner for individuals to who do not
                                 have the
                                 time to personally deliver donations to lend a helpful hand to those in need and make a
                                 difference.
@@ -97,7 +97,7 @@
                                 orphanages which
                                 in turn directly benefit those who are most helpless around us. By giving a couple of
                                 minutes of our
-                                day these children will no longer suffer because of lack of resources consequently
+                                day these children will no longer suffer because of lack of resources, consequently
                                 improving their
                                 quality of life.
                             </p>
@@ -117,7 +117,7 @@
                                 Due to our project’s flexibility it can be further developed with little modification.
                                 Our hope is
                                 that in the future we will be able to broaden the scope of users to include immigration
-                                centers, and
+                                centers,
                                 homeless and LGBTQ+ shelters. We believe any and all organizations that run solely on
                                 donations could
                                 immensely benefit from this tool.
